--- a/src/assets/css/baja-imaging.css
+++ b/src/assets/css/baja-imaging.css
@@ -3,8 +3,8 @@
 */
 
 .button{
-  background-color: #149fad;
-  border-bottom: 2px solid #0c818d;
+  background-color: #33749d;
+  border-bottom: 2px solid #0a263d;
 }
 
 /* 
@@ -12,5 +12,5 @@ Footer
 */
 
 .footer{
-	background-color: #113550;
+	background-color: #10395a;
 }
